<resources>
    <string name="app_name">LazyEngineer</string>
    <string name="title_activity_lazy_engineer">LazyEngineerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_account">Account</string>
    <string name="hello">Hello,</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="notes">Notes</string>
    <string name="notes_summary">You can find handwritten notes from all students.</string>
    <string name="question_paper">Question Paper</string>
    <string name="question_paper_summary">Last years Question paper from all universities</string>
    <string name="file">File</string>
    <string name="file_summary">See other students practical file</string>
    <string name="subject_">Subject :</string>
    <string name="year_">Year :</string>
    <string name="college_">College :</string>
    <string name="computer_graphics">Computer Graphics</string>
    <string name="books">Books</string>
    <string name="books_summary">Download books for free</string>
    <string name="jobs">Jobs</string>
    <string name="jobs_summary">Get all latest jobs post here</string>
    <string name="document_1">Document 1</string>
    <string name="document">Document</string>
    <string name="document_summary">You can find handwritten notes from all students</string>
    <string name="filter">Filter</string>
    <string name="int_days_ago">%d days ago</string>


    <string name="temp_file_title">Computer Graphics and Multimedia</string>
    <string name="temp_file_subject">Computer Graphics</string>
    <string name="temp_file_college">GTBIT</string>
    <string name="temp_auther">By Vinayak agarwal, Dr. harman singh jaggi</string>
    <string name="temp_book_desciption">You can find handwriten notes from all students.</string>
    <string name="dummy_about">"THE BOOK THAT INSPIRED THE AWARD-WINNING MOVIE Nominated for 12 OSCARS including BEST PICTURE, BEST DIRECTOR and BEST ACTOR Winner of 5 BAFTAS including Best Actor, Best Director and Best Film Winner of the 2016 Golden Globes for Best Motion Picture - Drama, Best Actor - Drama, and Best Director The novel that inspired the epic new movie starring Leonardo DiCaprio and Tom Hardy. "</string>
    <string name="upload">Upload</string>
    <string name="title">Title</string>
    <string name="upload_notes">Upload Notes</string>
    <string name="about">About</string>
    <string name="short_description_about_notes">Short description about your notes</string>
    <string name="topic">Topic</string>
    <string name="chapter">Chapter</string>
    <string name="unit">Unit</string>
    <string name="subject">Subject</string>
    <string name="tags">Tags</string>
    <string name="year">Year</string>
    <string name="entrance_exam">Entrance Exam</string>
    <string name="class_test">Class Test</string>
    <string name="mid_term">Mid Term</string>
    <string name="end_term">End Term</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="writer">Writer</string>
    <string name="upload_book">Upload Book</string>
    <string name="company">Company</string>
    <string name="no_of_openings">No. of Openings</string>
    <string name="no_of_employee">No. of Employee</string>
    <string name="job_description">Job Description</string>
    <string name="about_company">About Company</string>
    <string name="experience_level">Experience Level</string>
    <string name="internship">Internship</string>
    <string name="entry_level">Entry Level</string>
    <string name="associate">Associate</string>
    <string name="mid_senior_level">Mid-Senior level</string>
    <string name="director">Director</string>
    <string name="executive">Executive</string>
    <string name="job_type">Job Type</string>
    <string name="part_time">Part Time</string>
    <string name="full_time">Full Time</string>
    <string name="contract">Contract</string>
    <string name="temporary">Temporary</string>
    <string name="volunteer">Volunteer</string>
    <string name="other">Other</string>
    <string name="location">Location</string>
    <string name="upload_job">Upload Job</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forget_password"><b>Forget Password</b></string>
    <string name="don_t_have_a_account_create_one">Don’t have a account? <b>create one!</b></string>
    <string name="register_account">Register Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_a_account_go_to_login">Already have a account? <b>Go to Login</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_quote">Good Morning! Are you ready to get started?</string>
    <string name="profile">Profile</string>
    <string name="invite">Invite people to the site</string>
    <string name="notification">Notification</string>
    <string name="rate_us">Rate us</string>
    <string name="settings">Settings</string>
</resources>